src/objects/Loan__c.object
<CustomObject>
    <fields>
        <fullName>AccountDCA__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>DCA</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Loans (DCA)</relationshipLabel>
        <relationshipName>Loans1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AccountDMC__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>DMC</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Loans (DMC)</relationshipLabel>
        <relationshipName>LoansForDMC</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <label>Borrower</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Loans</relationshipLabel>
        <relationshipName>Loans</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Amount__c</fullName>
        <label>Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Application_Date__c</fullName>
        <formula>Loan_Application__r.Loan_Application_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Application Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Approval_State__c</fullName>
        <label>Approval State</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ArrearsStartDate__c</fullName>
        <label>Arrears Start Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Arrears_Ratio__c</fullName>
        <label>SF Arrears Ratio</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Broker__c</fullName>
        <label>Broker</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Collections_Notes__c</fullName>
        <label>Collections Notes</label>
        <length>3000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CustomerType__c</fullName>
        <label>CustomerType</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_Of_Last_Missed_Plan_Payment__c</fullName>
        <label>Date Of Last Missed Plan Payment</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Default_Reason__c</fullName>
        <label>Default Reason</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Bankruptcy</fullName>
                </value>
                <value>
                    <fullName>DebtArrangementScheme</fullName>
                    <label>Debt Arrangement Scheme</label>
                </value>
                <value>
                    <fullName>DebtReliefOrder</fullName>
                    <label>Debt Relief Order</label>
                </value>
                <value>
                    <fullName>IndividualVoluntaryArrangement</fullName>
                    <label>Individual Voluntary Arrangement</label>
                </value>
                <value>
                    <fullName>Sequestration</fullName>
                </value>
                <value>
                    <fullName>TrustDeeds</fullName>
                    <label>Trust Deeds</label>
                </value>
                <value>
                    <fullName>ZopaDefault</fullName>
                    <label>Zopa Default</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Disbursal_Date__c</fullName>
        <label>Disbursal Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Four_Payments_Down__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Four Payments Down</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Insitution__c</fullName>
        <label>Insitution</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Payment_Made__c</fullName>
        <label>Last_Payment_Made</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Loan_Application__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Loan Application</label>
        <referenceTo>Loan_Application__c</referenceTo>
        <relationshipLabel>Loans</relationshipLabel>
        <relationshipName>Loans</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Loan_Event__c</fullName>
        <label>Loan Event</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Loan_Id__c</fullName>
        <externalId>true</externalId>
        <label>Loan_Id</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Loan_Servicing_Fee_Rate__c</fullName>
        <label>Loan Servicing Fee Rate</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Loan_Usage__c</fullName>
        <label>Loan Usage</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Market__c</fullName>
        <label>Market</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Member_ID__c</fullName>
        <externalId>true</externalId>
        <label>Member_ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Monthly_Safeguard_Fee_Rate__c</fullName>
        <label>Monthly Safeguard Fee Rate</label>
        <precision>18</precision>
        <scale>8</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Original_Apr__c</fullName>
        <label>Original Apr</label>
        <precision>18</precision>
        <scale>8</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Original_First_Month_Repayment_Amount__c</fullName>
        <label>Original First Month Repayment Amount</label>
        <precision>18</precision>
        <scale>8</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Original_Monthly_Repayment_Amount__c</fullName>
        <label>Original Monthly Repayment Amount</label>
        <precision>18</precision>
        <scale>8</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Quick_Pay_Amount__c</fullName>
        <label>Quick Pay Amount</label>
        <precision>18</precision>
        <scale>8</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Rate__c</fullName>
        <label>Rate</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Requested_Amount__c</fullName>
        <label>Requested Amount</label>
        <precision>18</precision>
        <scale>8</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Rialto_Fee__c</fullName>
        <label>Rialto Fee</label>
        <precision>18</precision>
        <scale>8</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>SF Status</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Term__c</fullName>
        <label>Term</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Amount_Borrowed__c</fullName>
        <label>Total Amount Borrowed</label>
        <precision>18</precision>
        <scale>8</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Original_Repayable_Amount__c</fullName>
        <label>Total Original Repayable Amount</label>
        <precision>18</precision>
        <scale>8</scale>
        <type>Currency</type>
    </fields>
    <label>Loan</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All2</fullName>
        <columns>CREATED_DATE</columns>
        <columns>Loan_Id__c</columns>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Loans_Details</fullName>
        <columns>Default_Reason__c</columns>
        <columns>Account__c</columns>
        <columns>NAME</columns>
        <columns>Broker__c</columns>
        <columns>State__c</columns>
        <columns>AccountDCA__c</columns>
        <columns>Application_Date__c</columns>
        <columns>Approval_State__c</columns>
        <columns>Arrears_Ratio__c</columns>
        <columns>Collections_Notes__c</columns>
        <columns>CustomerType__c</columns>
        <columns>Loan_Application__c</columns>
        <columns>Disbursal_Date__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>ArrearsStartDate__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Default_Reason__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>Loans &amp; Details</label>
    </listViews>
    <nameField>
        <label>Loan Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Loans</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>